# Harbour-Chat

./: .gitignore  AGENTS.md  Dockerfile  README.md  package.json
api/: Cargo.toml
api/migrations/: 001_initial.sql  002_seed_harbour_home.sql  003_security_audit.sql  004_phase3_presence_voice.sql  005_voice_media_sessions.sql  006_board_posts.sql  007_server_appearance_and_user_settings.sql  008_push_to_talk_key.sql  009_user_avatars.sql  010_message_reply.sql  011_board_votes.sql  012_board_comments.sql
api/src/: config.rs  error.rs  lib.rs  main.rs
api/src/application/: board_service.rs  chat_service.rs  mod.rs
api/src/contracts/: events.rs  gateway_headers.rs  mod.rs  voice_signaling.rs
api/src/domain/: board_feed.rs  mod.rs
api/src/domain/entities/: attachment.rs  board_feed.rs  channel.rs  dm_inbox.rs  member.rs  message.rs  mod.rs  post.rs  post_comment.rs  presence.rs  reaction_summary.rs  server.rs  share_target.rs  typing_indicator.rs  user.rs  user_search.rs  user_settings.rs  voice_media.rs  voice_participant.rs
api/src/domain/ports/: attachment_store.rs  avatar_store.rs  chat_repository.rs  mod.rs  post_repository.rs  realtime_publisher.rs  user_repository.rs  voice_media.rs
api/src/infrastructure/: mod.rs  state.rs
api/src/infrastructure/http/: auth_user.rs  gateway.rs  mod.rs  router.rs
api/src/infrastructure/persistence/: mod.rs  pool.rs  sqlite_chat_repository.rs  sqlite_post_repository.rs  (+1 more)
api/tests/: contract_message_sent.rs  contract_post_created.rs  contracts_events_test.rs  gateway_session_cookie.rs  integration_test.rs
(+102 files in other folders)
