[package]
name = "harbour-chat-api"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "harbour_chat_api"
path = "src/lib.rs"

[[bin]]
name = "harbour-chat-api"
path = "src/main.rs"

[dependencies]
anyhow = "1"
async-trait = "0.1"
axum = { version = "0.8", features = ["ws", "multipart"] }
chrono = { version = "0.4", features = ["serde"] }
futures-util = { version = "0.3", features = ["sink"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
chacha20poly1305 = "0.10"
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
infer = "0.16"
once_cell = "1.20"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
hmac = "0.12"
sha1 = "0.10"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate", "chrono", "uuid"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
http-body-util = "0.1"
hyper = "1"
tower = { version = "0.5", features = ["util"] }
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
